fix collapse menu

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -193,3 +193,7 @@ input.text-white:focus, textarea.text-white:focus {
     background-position: left bottom;
   }
 }
+
+button:focus {
+  outline: 0;
+}
